--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -11,7 +11,7 @@
     <header>
         <nav>
             <ul>
-                <li><img src="images/White-1.png" alt="EcoGlow LED Grow Light"></li>
+                <li><img src="White-1.png" alt="EcoGlow LED Grow Light"></li>
                 <li><a href="#About">About</a></li>
                 <li><a href="#Products">Products</a></li>
                 <li><a href="#features">Features </a></li>
